--- a/templates/messagebox.html
+++ b/templates/messagebox.html
@@ -1,1 +1,11 @@
-<h2>Did you know?</h2>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="../styles/messagebox.css">
+</head>
+<body>
+
+    <h2>Did you know?</h2><br>
+    <p> {{myValue}}</p>
+</body>
+</html>
